--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <div class="cart">
                             <span class="cart__count">5</span>
                         </div>
+                        <span class="burger-btn"></span>
                     </nav>
                 </div>
             </div>
