--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <li class="nav__item">
                                 <a href="#" class="nav__link">Для детей</a></li>
                         </ul>
-                        <a href="#" class="logo"><img src="img/logo.svg" alt="The Loop"></a>
+                        <a href="#" class="nav__logo"><img src="img/logo.svg" alt="The Loop"></a>
                         <ul class="nav__list">
                             <li class="nav__item">
                                 <a href="#" class="nav__link">Оплата</a></li>
